fix schema editor on smaller screens

--- a/client/app/assets/less/redash/query.less
+++ b/client/app/assets/less/redash/query.less
@@ -510,8 +510,8 @@ nav .rg-bottom {
         max-width: 100%;
         border-right: none;
 
-        .schema-browser {
-          max-height: 250px;
+        .editor__left__schema {
+          height: 300px !important;
         }
 
         .rg-right {
